force-app/main/default/objects/EmailError__c/EmailError__c.object-meta.xml
<CustomObject>
    <description>Records for failed emails</description>
    <label>Email Error</label>
    <nameField>
        <displayFormat>EE-{00000}</displayFormat>
        <label>Email Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>