force-app/main/default/objects/EmailError__c/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <description>Identifies which fields in the object, if any, affected the error condition.</description>
    <label>Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>