force-app/main/default/objects/EmailError__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The text of the error message.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>