force-app/main/default/objects/EmailError__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <description>Status code for the failed email</description>
    <label>Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>