force-app/main/default/objects/EmailError__c/fields/TargetObjectId__c.field-meta.xml
<CustomField>
    <fullName>TargetObjectId__c</fullName>
    <description>The ID of the target record for which the error occurred.</description>
    <label>Target Object Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>